--- a/React/src/App.css
+++ b/React/src/App.css
@@ -12,4 +12,14 @@
   }
   
   /* don't forget to do line through */
-  
+  .button {
+    color: rgb(15, 15, 15) ;
+    background-color: rgb(228, 247, 228);
+  }
+
+  .delete {
+    color: rgb(250, 243, 243) ;
+    background-color: rgb(230, 11, 11);
+    border-radius: 20cm;
+    float: right;
+    }
