--- a/React/src/App.css
+++ b/React/src/App.css
@@ -17,6 +17,12 @@
     background-color: rgb(228, 247, 228);
   }
 
+  .update {
+    color: rgb(16, 241, 110) ;
+     border-radius: 20cm;
+    float: right;
+    }
+
   .delete {
     color: rgb(250, 243, 243) ;
     background-color: rgb(230, 11, 11);
